--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "silex/silex": "1.0.*",
+        "silex/silex": "~1.0",
         "propel/propel": "2.0.0-alpha1"
     },
     "require-dev": {
