--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 
 php:
-    - 5.3
     - 5.4
+    - 5.5
 
 before_script:
     - wget http://getcomposer.org/composer.phar
@@ -11,3 +11,4 @@ before_script:
 notifications:
     email:
         - william.durand1@gmail.com
+        - cristianocinotti@gmail.com
