--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,9 @@
     }
     ],
     "require": {
-        "silex/silex": "1.0.*",
-        "propel/propel1": "1.6.*"
+        "silex/silex": "~1.0",
+        "propel/propel1": "~1.6"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-0": { "Propel\\Silex": "src" }
     }
