--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ before_script:
 
 notifications:
     email:
-        - william.durand1@gmail.com
-        - cristianocinotti@gmail.com
+        - rafael@nery.info
