--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,31 @@
 {
-    "name": "propel/propel-service-provider",
-    "type": "library",
-    "description": "Propel integration for Silex.",
-    "keywords": ["silex", "propel"],
-    "license": "MIT",
-    "authors": [
-    {
-        "name": "William Durand",
-        "email": "william.durand1@gmail.com"
-    },
-    {
-        "name": "Cristiano Cinotti",
-        "email": "cristianocinotti@gmail.com"
-    }
+    "name"       : "propel/propel-service-provider",
+    "type"       : "library",
+    "description": "Propel 2  integration for Silex 2.",
+    "keywords"   : ["silex", "propel"],
+    "license"    : "MIT",
+    "authors"    : [
+        {
+            "name" : "William Durand",
+            "email": "william.durand1@gmail.com"
+        },
+        {
+            "name" : "Cristiano Cinotti",
+            "email": "cristianocinotti@gmail.com"
+        },
+        {
+            "name" : "Rafael Nery",
+            "email": "rafael@nery.info"
+        }
     ],
     "require": {
-        "silex/silex": "~1.0",
+        "silex/silex": "~2.0@dev",
         "propel/propel": "~2.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
-        "psr-0": { "Propel\\Silex": "src" }
+        "psr-4": { "": "src" }
     }
 }
